--- a/Pumpkin/Views/_ViewImports.cshtml
+++ b/Pumpkin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Pumpkin
 @using Pumpkin.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Sitecore.AspNet.RenderingEngine
